--- a/csv_블록별_시간대별소액결제건수_카드소비패턴.ipynb
+++ b/csv_블록별_시간대별소액결제건수_카드소비패턴.ipynb
@@ -6,7 +6,7 @@
       "name": "csv_블록별 시간대별소액결제건수 카드소비패턴.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNlI0CTtHCZuvn8E0vmd4S8",
+      "authorship_tag": "ABX9TyN9IwnbxIu5VN7NByITs/h9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "It-pJ_xROets"
-      },
-      "outputs": [],
       "source": [
-        "csv_path = '/content/drive/MyDrive/_aiffel/_datathon_rosy/CrdCnsmptn/csv/블록별 시간대별소액결제건수 카드소비패턴.csv'"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yOYrRdjwll_S",
+        "outputId": "2ef95c9f-2710-46e3-8fc2-ea2085d672a5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
       ]
     },
     {
@@ -45,10 +58,308 @@
         "import pandas as pd"
       ],
       "metadata": {
-        "id": "Tn4q_a-OPpKY"
+        "id": "4F1Rh_aGlm0Z"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "plt.rc('font', family='NanumGothic')"
+      ],
+      "metadata": {
+        "id": "XO9JqtRBlvKs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "BASE_DIR = '/content/drive/MyDrive/_aiffel/_datathon_rosy/CrdCnsmptn/csv/'"
+      ],
+      "metadata": {
+        "id": "QQMjFLT0lwjQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1 = pd.read_csv(BASE_DIR + '블록별 시간대별소액결제건수 카드소비패턴.csv', encoding='cp949')"
+      ],
+      "metadata": {
+        "id": "eCSgaihalyBo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 468
+        },
+        "id": "slaoVo9ol2Rp",
+        "outputId": "c73180b1-e018-4e9e-e8b8-d3e080e8b31b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "    서울시민업종코드(UPJONG_CD)  기준년월(YM)  시간대구간(TIME)  고객주소블록코드(BLOCK_CD)  \\\n",
+              "0                 SS017    202006            6               11063   \n",
+              "1                 SS013    201608            6              216137   \n",
+              "2                 SS016    201802            3              224819   \n",
+              "3                 SS055    201906            2               19869   \n",
+              "4                 SS038    201612            5               28382   \n",
+              "..                  ...       ...          ...                 ...   \n",
+              "495               SS017    201911            5              366735   \n",
+              "496               SS016    201803            2              155750   \n",
+              "497               SS081    202103            3              366426   \n",
+              "498               SS069    201707            3              214935   \n",
+              "499               SS069    201909            4              225316   \n",
+              "\n",
+              "     카드이용금액계(AMT_CORR)  소액결제건수(MICRO_PYM)  \n",
+              "0                  257                 25  \n",
+              "1                   86                 10  \n",
+              "2                   35                 15  \n",
+              "3                   10                  0  \n",
+              "4                   10                  5  \n",
+              "..                 ...                ...  \n",
+              "495                  5                  5  \n",
+              "496                 10                 30  \n",
+              "497                  5                  5  \n",
+              "498                 70                 10  \n",
+              "499                 30                  5  \n",
+              "\n",
+              "[500 rows x 6 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-37e6ef52-9991-4eca-a1cf-cfdfc652abcd\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>서울시민업종코드(UPJONG_CD)</th>\n",
+              "      <th>기준년월(YM)</th>\n",
+              "      <th>시간대구간(TIME)</th>\n",
+              "      <th>고객주소블록코드(BLOCK_CD)</th>\n",
+              "      <th>카드이용금액계(AMT_CORR)</th>\n",
+              "      <th>소액결제건수(MICRO_PYM)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>SS017</td>\n",
+              "      <td>202006</td>\n",
+              "      <td>6</td>\n",
+              "      <td>11063</td>\n",
+              "      <td>257</td>\n",
+              "      <td>25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>SS013</td>\n",
+              "      <td>201608</td>\n",
+              "      <td>6</td>\n",
+              "      <td>216137</td>\n",
+              "      <td>86</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>SS016</td>\n",
+              "      <td>201802</td>\n",
+              "      <td>3</td>\n",
+              "      <td>224819</td>\n",
+              "      <td>35</td>\n",
+              "      <td>15</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>SS055</td>\n",
+              "      <td>201906</td>\n",
+              "      <td>2</td>\n",
+              "      <td>19869</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>SS038</td>\n",
+              "      <td>201612</td>\n",
+              "      <td>5</td>\n",
+              "      <td>28382</td>\n",
+              "      <td>10</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>495</th>\n",
+              "      <td>SS017</td>\n",
+              "      <td>201911</td>\n",
+              "      <td>5</td>\n",
+              "      <td>366735</td>\n",
+              "      <td>5</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>496</th>\n",
+              "      <td>SS016</td>\n",
+              "      <td>201803</td>\n",
+              "      <td>2</td>\n",
+              "      <td>155750</td>\n",
+              "      <td>10</td>\n",
+              "      <td>30</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>497</th>\n",
+              "      <td>SS081</td>\n",
+              "      <td>202103</td>\n",
+              "      <td>3</td>\n",
+              "      <td>366426</td>\n",
+              "      <td>5</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>498</th>\n",
+              "      <td>SS069</td>\n",
+              "      <td>201707</td>\n",
+              "      <td>3</td>\n",
+              "      <td>214935</td>\n",
+              "      <td>70</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>499</th>\n",
+              "      <td>SS069</td>\n",
+              "      <td>201909</td>\n",
+              "      <td>4</td>\n",
+              "      <td>225316</td>\n",
+              "      <td>30</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>500 rows × 6 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-37e6ef52-9991-4eca-a1cf-cfdfc652abcd')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-37e6ef52-9991-4eca-a1cf-cfdfc652abcd button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-37e6ef52-9991-4eca-a1cf-cfdfc652abcd');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -56,9 +367,9 @@
         ""
       ],
       "metadata": {
-        "id": "s5vvw8CIQtxz"
+        "id": "cFw7m1yGhEhP"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     }
   ]
